# staged

./: .gitignore  AGENTS.md  README.md  justfile  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  refresh.rs
src-tauri/src/diff/: actions.rs  ai_describe.rs  git.rs  mod.rs  review.rs  types.rs  watcher.rs
src-tauri/src/git/: mod.rs  provider.rs  status.rs
src-tauri/src/git/diff/: mod.rs
src-tauri/src/watcher/: mod.rs
src/lib/: CommentEditor.svelte  CommitModal.svelte  DiffSelectorModal.svelte  DiffViewer.svelte  FileViewer.svelte  HoldToDiscard.svelte  Sidebar.svelte  SmartDiffView.svelte  TopBar.svelte  diffConnectors.ts  theme.ts  types.ts
src/lib/services/: ai.ts  git.ts  highlighter.ts  review.ts  scrollSync.ts  statusEvents.ts
src/lib/stores/: comments.svelte.ts  diffState.svelte.ts  preferences.svelte.ts  smartDiff.svelte.ts
