[package]
name = "staged"
version = "0.1.0"
description = "A standalone git diff viewer with staging integration"
authors = ["baxen"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "staged_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# Git integration
git2 = "0.19"

# File watching
notify = "8.0"
notify-debouncer-full = "0.5"

# Syntax highlighting
syntect = "5.2"
tauri-plugin-dialog = "2.4.2"
